fix uneven margins in recently viewed ctx menu

--- a/res/css/views/rooms/_RecentlyViewedButton.scss
+++ b/res/css/views/rooms/_RecentlyViewedButton.scss
@@ -51,6 +51,7 @@ limitations under the License.
 
         .mx_BaseAvatar {
             margin-right: 8px;
+            width: 24px;
         }
 
         .mx_RecentlyViewedButton_entry_label {
